--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -104,7 +104,7 @@
 				<div class="sub-title">
 					<h3 class="mo-no">소장품 수정</h3>
 				</div>
-				
+				<form id="form">
 				<div class="baeg-wrap">
 					<div class="med">
 						<h2 class="">작가 정보 <span class="c-reds">* 필수 정보</span></h2>
@@ -120,11 +120,15 @@
 							<table class="mstyle-2">
 								<tr>
 									<th><span class="my-red">작가명</span></th>
-									<td><input type="text" class="input-4" id="artstActvtyNm" th:value="${result.artstActvtyNm}"/></td>
+									<td><input type="text" class="input-4" id="artstActvtyNm" th:value="${result.artstActvtyNm}" placeholder="작가명 또는 작가의 활동명을 입력해주세요."/></td>
 								</tr>
 								<tr>
 									<th>출생년도</th>
-									<td><input type="text" class="input-4" id="artstYear" th:value="${result.artstBirthYear}"/></td>
+									<td><input type="number" class="input-4" id="artstBirthYear" th:value="${result.artstBirthYear}" placeholder="작가의 출생년도를 입력해주세요." onblur="this.value = this.value.replace('.', ''); if(this.value.length != 4){this.value='';modalAlertShow('년도 4자리만 입력해주세요.');}"/></td>
+								</tr>
+								<tr>
+									<th>작고</th>
+									<td><input type="number" class="input-4" id="artstYod" th:value="${result.artstYod}" placeholder="작가의 사망년도를 입력해주세요." onblur="this.value = this.value.replace('.', ''); if(this.value.length != 4){this.value='';modalAlertShow('년도 4자리만 입력해주세요.');}"/></td>
 								</tr>
 							</table>
 						</div>
@@ -305,7 +309,7 @@
 								</tr>
 								<tr>
 									<th><span class="my-red">제작년도</span></th>
-									<td><input type="text" class="input-4" id="workProdcYear" th:value="${result.workProdcYear}"/></td>
+									<td><input type="number" class="input-4" id="workProdcYear" th:value="${result.workProdcYear}" onblur="this.value = this.value.replace('.', ''); if(this.value.length != 4){this.value='';modalAlertShow('년도 4자리만 입력해주세요.');}"/></td>
 								</tr>
 								<tr>
 									<th><span class="my-red">사이즈</span></th>
@@ -334,7 +338,7 @@
 								</tr>
 								<tr>
 									<th><span class="">소장가</span></th>
-									<td><input type="text" class="input-4" id="workPrc" th:value="${result.workPrc}" /></td>
+									<td><input type="text" class="input-4" id="workPrc" th:value="${result.workPrc}" onkeyup="workPrcCal(this)"/></td>
 								</tr>
 								<tr>
 									<th><span class="">작품 사진(좌)</span></th>
@@ -429,6 +433,7 @@
 					
 					
 				</div>
+				</form>
 			</div>
 			
 			
@@ -762,7 +767,8 @@ $(function() {
 				if(confirm){
 					storage = JSON.parse(sessionStorage.getItem("work"));
 					$("#artstActvtyNm").val(storage.artstActvtyNm);
-					$("#artstYear").val(storage.artstBirthYear);
+					$("#artstBirthYear").val(storage.artstBirthYear);
+					$("#artstYod").val(storage.artstYod);
 					$("#workNm").val(storage.workNm);
 					$('input:radio[name="workFrmYn"][value="'+storage.workFrmYn+'"]').prop('checked', true);
 					$('input:radio[name="workSaleYn"][value="'+storage.workSaleYn+'"]').prop('checked', true);
@@ -916,7 +922,8 @@ function closeLakeHelp(){
 function collectionReg(){
 	if(checkValid()){
 		result.mbrSq = sMbrSqVal;
-		result.artstBirthYear = $("#artstYear").val();
+		result.artstBirthYear = $("#artstBirthYear").val();
+		result.artstYod = $("#artstYod").val();
 		result.workPrc = $("#workPrc").val().replaceAll(/,/g, '');
 		result.workSizeWidth = $("#workSizeWidth").val();
 		result.workSizeDepth = $("#workSizeDepth").val();
@@ -1170,7 +1177,8 @@ function collectionStorage(){
 																artstSq : work.artstSq,
 																artstActvtyNm : $("#artstActvtyNm").val(),
 																artstEnglsNm : work.artstEnglsNm,
-																artstBirthYear : $("#artstYear").val(),
+																artstBirthYear : $("#artstBirthYear").val(),
+																artstYod : $("#artstYod").val(),
 																workNm : $("#workNm").val(),
 																workFrmYn : $('input[name=workFrmYn]:checked').val(),
 																workSaleYn : $('input[name=workSaleYn]:checked').val(),
@@ -1237,14 +1245,22 @@ function searchArtst(){
 				var result = data.result;
 				var html = '';
 				for(var i=0; i<result.length; i++){
-					html += '<li artstSq="'+result[i].artstSq+'" artstActvtyNm="'+result[i].artstActvtyNm+'" artstEnglsNm="'+result[i].artstEnglsNm+'" artstBirthYear="'+result[i].artstBirthYear+'" onclick="selectArtst(this)" style="cursor:pointer;">';
+					html += '<li artstSq="'+result[i].artstSq+'" artstActvtyNm="'+result[i].artstActvtyNm+'" artstEnglsNm="'+result[i].artstEnglsNm+'" artstBirthYear="'+result[i].artstBirthYear+'" artstYod="'+result[i].artstYod+'" onclick="selectArtst(this)" style="cursor:pointer;">';
 					html += '	<div class="collsearch">';
 					html += '		<div class="collsear-img"><img src="'+result[i].artstProfileImgUrl+'" class="colls-i2" /></div>';
 					html += '		<div class="collsear-text">';
 					if(result[i].artstEnglsNm != null && result[i].artstEnglsNm != ""){
-						html += '			<h2>'+result[i].artstActvtyNm+'('+result[i].artstEnglsNm+') / '+result[i].artstBirthYear+'</h2>';
+						if(result[i].artstYod != null && result[i].artstYod != ""){
+							html += '			<h2>'+result[i].artstActvtyNm+'('+result[i].artstEnglsNm+') / '+result[i].artstBirthYear+'~'+result[i].artstYod+'</h2>';
+						}else{
+							html += '			<h2>'+result[i].artstActvtyNm+'('+result[i].artstEnglsNm+') / '+result[i].artstBirthYear+'</h2>';
+						}
 					}else{
-						html += '			<h2>'+result[i].artstActvtyNm+' / '+result[i].artstBirthYear+'</h2>';
+						if(result[i].artstYod != null && result[i].artstYod != ""){
+							html += '			<h2>'+result[i].artstActvtyNm+' / '+result[i].artstBirthYear+'~'+result[i].artstYod+'</h2>';
+						}else{
+							html += '			<h2>'+result[i].artstActvtyNm+' / '+result[i].artstBirthYear+'</h2>';
+						}
 					}
 					if(result[i].artstSelfIntro != null && result[i].artstSelfIntro != ""){
 						html += '			<p>'+result[i].artstSelfIntro+'</p>';
@@ -1267,12 +1283,22 @@ function searchArtst(){
 }
 
 function selectArtst(obj){
+	$("#artstActvtyNm").val("");
+	$("#artstBirthYear").val("");
+	$("#artstYod").val("");
+	
 	var artstActvtyNm = obj.attributes.artstActvtyNm.value;
 	var artstBirthYear = obj.attributes.artstBirthYear.value;
+	var artstYod = obj.attributes.artstYod.value;
+	
 	result.artstEnglsNm = obj.attributes.artstEnglsNm.value;
 	result.artstSq = obj.attributes.artstSq.value;
+	
 	$("#artstActvtyNm").val(artstActvtyNm);
-	$("#artstYear").val(artstBirthYear);
+	$("#artstBirthYear").val(artstBirthYear);
+	if(artstYod != null && artstYod != "" && artstYod != "null"){
+		$("#artstYod").val(artstYod);
+	}
 	$("#searchArtstModal").modal("hide");
 }
 
@@ -1293,8 +1319,24 @@ function searchWork(){
 				html += '	<div class="collsearch">';
 				html += '		<div class="collsear-img"><img src="'+result[i].workMainImgUrl+'" class="colls-i2" /></div>';
 				html += '		<div class="collsear-text">';
-				html += '			<h2>'+result[i].workNm+'('+result[i].workProdcYear+')</h2>';
-				html += '			<h3>'+result[i].artstActvtyNm+'('+result[i].artstEnglsNm+') / '+result[i].artstBirthYear+'</h3>';
+				if(result[i].workProdcYear != null && result[i].workProdcYear != ""){
+					html += '			<h2>'+result[i].workNm+'('+result[i].workProdcYear+')</h2>';
+				}else{
+					html += '			<h2>'+result[i].workNm+'</h2>';
+				}
+				if(result[i].artstEnglsNm != null && result[i].artstEnglsNm != ""){
+					if(result[i].artstYod != null && result[i].artstYod != ""){
+						html += '			<h3>'+result[i].artstActvtyNm+'('+result[i].artstEnglsNm+') / '+result[i].artstBirthYear+' ~ '+result[i].artstYod+'</h3>';
+					}else{
+						html += '			<h3>'+result[i].artstActvtyNm+'('+result[i].artstEnglsNm+') / '+result[i].artstBirthYear+'</h3>';
+					}
+				}else{
+					if(result[i].artstYod != null && result[i].artstYod != ""){
+						html += '			<h3>'+result[i].artstActvtyNm+' / '+result[i].artstBirthYear+' ~ '+result[i].artstYod+'</h3>';
+					}else{
+						html += '			<h3>'+result[i].artstActvtyNm+' / '+result[i].artstBirthYear+'</h3>';
+					}
+				}
 				if(result[i].workIntrdc == null || result[i].workIntrdc == ""){
 					html += '			<p>작품 소개가 없습니다.</p>';
 				}else{
@@ -1322,11 +1364,21 @@ function selectWork(obj){
       	workSq : workSq
       },
 		success: function(data){
+			$("#form")[0].reset();
+			$("#workMainImgUrl1").attr("src", "");
+			$("#workImgFrtUrl1").attr("src", "");
+			$("#workImgRerUrl1").attr("src", "");
+			$("#workImgLefUrl1").attr("src", "");
+			$("#workImgRitUrl1").attr("src", "");
+			$("#workImgTopUrl1").attr("src", "");
+			$("#workImgTopUrl1").attr("src", "");
+			
 			var result2 = data.result;
 			result.artstSq = result2.artstSq;
 			result.artstEnglsNm = result2.artstEnglsNm;
 			$("#artstActvtyNm").val(result2.artstActvtyNm);
-			$("#artstYear").val(result2.artstBirthYear);
+			$("#artstBirthYear").val(result2.artstBirthYear);
+			$("#artstYod").val(result2.artstYod);
 			$("#workNm").val(result2.workNm);
 			$('input:radio[name="workFrmYn"][value="'+result2.workFrmYn+'"]').prop('checked', true);
 			$('input:radio[name="workSaleYn"][value="'+result2.workSaleYn+'"]').prop('checked', true);
@@ -1360,12 +1412,20 @@ function selectWork(obj){
 			$("#workImgTopUrl1").attr("src", result2.workImgTopUrl);
 			$("#workImgTopUrl1").attr("src", result2.workImgBotUrl);
 			$('input:radio[name="workClrCd"][value="'+result2.workSaleYn+'"]').prop('checked', true);
+			$("#workLake").val(result.workLake);
 		},
 		error: function(error) {
             alert("오류 발생" + error);
         }
 	}); 
 }
+
+function workPrcCal(obj){
+	obj.value = obj.value.replace(/[^0-9]/g,'');   // 입력값이 숫자가 아니면 공백
+	obj.value = obj.value.replace(/,/g,'');          // ,값 공백처리
+    obj.value = obj.value.replace(/\B(?=(\d{3})+(?!\d))/g, ","); // 정규식을 이용해서 3자리 마다 , 추가 	
+}
+
 $(window).on("resize", function () {
     if(window.matchMedia('(min-width: 1537px)').matches)
     {
