--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -239,8 +239,8 @@ html, body{font-size: calc(100vw / 75);}
     display: inline-block;
     border-radius: 50%;
     padding: 16px 0px;
-    margin: 48px 0 90px 0;
-    display: none;
+    margin: 15px auto 0;
+    display: block;
 }
 .mab-rb .mab-a span{
     font-size: 13px;
@@ -252,7 +252,7 @@ html, body{font-size: calc(100vw / 75);}
     top: 0;
     right: 0;
     z-index: 2;
-    height: 59rem;
+    height: 65rem;
     background-color: #323232;
     width: 16rem;
     text-align: center;
