--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
@@ -175,7 +175,7 @@
 								</tr>
 								<tr>
 									<th><span class="my-red">제작년도</span></th>
-									<td><input type="text" class="input-4" id="workProdcYear" th:value="${result.workProdcYear}"/></td>
+									<td><input type="number" class="input-4" id="workProdcYear" th:value="${result.workProdcYear}" onblur="this.value = this.value.replace('.', ''); if(this.value.length != 4){this.value='';modalAlertShow('년도 4자리만 입력해주세요.');}"/></td>
 								</tr>
 								<tr>
 									<th><span class="">작품 대표 사진</span></th>
@@ -340,7 +340,7 @@
 								<tr>
 									<th><span class="">소장가</span></th>
 									<td>
-										<input type="text" class="input-4" id="workPrc" th:value="${result.workPrc}"/>
+										<input type="text" class="input-4" id="workPrc" th:value="${result.workPrc}" onkeyup="workPrcCal(this)"/>
 									</td>
 								</tr>
 								<tr>
@@ -1186,6 +1186,12 @@ function readImg(input, imgId){
         // reader가 이미지 읽도록 하기
         reader.readAsDataURL(input.files[0]);
     }
+}
+
+function workPrcCal(obj){
+	obj.value = obj.value.replace(/[^0-9]/g,'');   // 입력값이 숫자가 아니면 공백
+	obj.value = obj.value.replace(/,/g,'');          // ,값 공백처리
+    obj.value = obj.value.replace(/\B(?=(\d{3})+(?!\d))/g, ","); // 정규식을 이용해서 3자리 마다 , 추가 	
 }
      
  $(window).on("resize", function () {
