--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -881,10 +881,10 @@ function myWorkReg(){
 	if(checkValid()){
 		work.mbrSq = sMbrSqVal;
 		work.artstSq = artstSq;
-		work.artstActvtyNm = artstActvtyNm;
-		work.artstEnglsNm = artstEnglsNm;
-		work.artstBirthYear = artstBirthYear;
-		work.artstYod = artstYod;
+		//work.artstActvtyNm = artstActvtyNm;
+		//work.artstEnglsNm = artstEnglsNm;
+		//work.artstBirthYear = artstBirthYear;
+		//work.artstYod = artstYod;
 		work.workPrc = $("#workPrc").val().replaceAll(/,/g, '');
 		work.workLake = $("#workLake").val();
 		work.workVideoUrl = $("#workVideoUrl").val();
