--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -960,7 +960,7 @@
 								<span class="span-in">예금주명</span>
 							</div>
 							<div class="input-box">
-								<input type="number" class="input-2" name="birth" placeholder="생년월일 6자리 / 사업자번호 10자리" />
+								<input type="number" class="input-2" name="birth" placeholder="생년월일 6자리를 입력해주세요" oninput="this.value = this.value.replace('.', ''); if(this.value.length > 6){this.value='';}"/>
 								<span class="span-in">생년월일</span>
 							</div>
 						</div>
