어드민 발주서 엑셀 다운로드 기능 추가 / 풀 받고 프로젝트 클린 > 메이븐 클린 > 메이븐 인스톨 해주세요

--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
@@ -1543,11 +1543,17 @@
 		    	
 		    	if(data == 1) {
 		    		
+		    		if(useYn == "Y"){
+		    			//modalAlertShow("작가 정보등록 완료했습니다.","");
+			    		alert("작가 신청이 완료되었습니다. \n\n 관리자 승인 후 포트폴리오 메뉴 이용이 가능합니다.");
+			    		
+			    		AuthorInfoSaveView(2);
+		    		}else{
+						alert("작가 정보가 임시 저장되었습니다.");
+			    		
+			    		AuthorInfoSaveView(1);
+		    		}
 		    		
-		    		//modalAlertShow("작가 정보등록 완료했습니다.","");
-		    		alert("작가 신청이 완료되었습니다. \n\n 관리자 승인 후 포트폴리오 메뉴 이용이 가능합니다.")
-		    		
-		    		AuthorInfoSaveView(2);
 		    		
 		    	}
 		   	 },
