--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -322,7 +322,7 @@
 			<div class="artist-wrap">
 				<div class="artist-box max-1500">
 					<div class="sub-title mg_t77">
-						<h3>Artist Introduce</h3>
+						<h3>Artist Information</h3>
 					</div>
 					<div class="sub-user">
 						<div class="su-l">
