My Gallery -> My Collection TEXT 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection_backup.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection_backup.html
@@ -96,7 +96,7 @@ jQuery(document).ready(function() {
 	var conBtn = document.getElementById("conBtn");
 	conBtn.style.display = "";
 	var conTitleHtml = "";
-	conTitleHtml += '<h3>My Gallery</h3>';
+	conTitleHtml += '<h3>My Collection</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
 	conBtn.innerHTML += '<a href="/collection_reg"><img src="resources/img/mypage/mycon-3.png" /></a>';
 	$("#myCollection").addClass("active");
