--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
@@ -172,7 +172,7 @@ jQuery(document).ready(function() {
 	const conBtn = document.getElementById("conBtn");
 	conBtn.remove();
 	var conTitleHtml = "";
-	conTitleHtml += '<h3>My Gallery</h3>';
+	conTitleHtml += '<h3>My Collection</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
 	
 	$("#scrap").addClass("active");
