--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -48,7 +48,7 @@
 			<div class="panel-heading" role="tab" id="heading3">
 				<h4 class="panel-title">
 					<a data-toggle="collapse" data-parent="#accordion3" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
-						My Gallery
+						My Collection
 					</a>
 				</h4>
 			</div>
