--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -1017,7 +1017,7 @@
 			modalAlertShow("로그인 된 회원만 이용 할 수 있습니다.");
 		}else{
 			$("#paintModal").modal("hide");
-			modalConfirm("My Gallery > 소장품 페이지로 이동합니다.", function(confrim){
+			modalConfirm("My Collection > 소장품 페이지로 이동합니다.", function(confrim){
 				$("#paintModal").modal("hide");
 				if(confrim){
 					pageGoPost({
